--- a/trunk/src/slurmctld/Makefile.am
+++ b/trunk/src/slurmctld/Makefile.am
@@ -42,8 +42,7 @@ slurmctld_SOURCES = 	\
 	state_save.h	\
 	step_mgr.c
 
-
-slurmctld_LDFLAGS = -export-dynamic 
+slurmctld_LDFLAGS = -export-dynamic $(CMD_LDFLAGS)
 
 force:
 $(slurmctld_LDADD) : force
