--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -335,6 +335,7 @@ typedef struct partition_info {
 	uint32_t total_nodes;	/* total number of nodes in the partition */
 	uint32_t total_cpus;	/* total number of cpus in the partition */
 	uint16_t default_part;	/* 1 if this is default partition */
+	uint16_t hidden;	/* 1 if partition is hidden by default */
 	uint16_t root_only;	/* 1 if allocate must come for user root */
 	uint16_t shared;	/* 1 if job can share nodes, 
 				 * 2 if job must share nodes */
@@ -677,11 +678,13 @@ extern void slurm_print_ctl_conf PARAMS((
  *	information if changed since update_time 
  * IN update_time - time of current configuration data
  * IN job_info_msg_pptr - place to store a job configuration pointer
+ * IN show_all - if set then report even "hidden" partitions
  * RET 0 or -1 on error
  * NOTE: free the response using slurm_free_job_info_msg
  */
 extern int slurm_load_jobs PARAMS((
-	time_t update_time, job_info_msg_t **job_info_msg_pptr));
+	time_t update_time, job_info_msg_t **job_info_msg_pptr,
+	uint16_t show_all));
 
 /*
  * slurm_free_job_info - free the job information response message
@@ -750,12 +753,14 @@ extern int slurm_update_job PARAMS(( job_desc_msg_t * job_msg )) ;
  * IN step_id - get information for specific job step id, zero for all 
  *	job steps
  * IN job_info_msg_pptr - place to store a job configuration pointer
+ * IN show_all - if set then report even "hidden" partitions
  * RET 0 or a slurm error code
  * NOTE: free the response using slurm_free_job_step_info_response_msg
  */
 extern int slurm_get_job_steps PARAMS((
 	time_t update_time, uint32_t job_id, uint32_t step_id, 
-	job_step_info_response_msg_t **step_response_pptr));
+	job_step_info_response_msg_t **step_response_pptr,
+	uint16_t show_all));
 
 /*
  * slurm_free_job_step_info_response_msg - free the job step 
@@ -797,11 +802,13 @@ extern void slurm_print_job_step_info PARAMS((
  *	if changed since update_time 
  * IN update_time - time of current configuration data
  * IN node_info_msg_pptr - place to store a node configuration pointer
+ * IN show_all - if set then report even "hidden" partitions
  * RET 0 or a slurm error code
  * NOTE: free the response using slurm_free_node_info_msg
  */
 extern int slurm_load_node PARAMS((
-	time_t update_time, node_info_msg_t **node_info_msg_pptr ));
+	time_t update_time, node_info_msg_t **node_info_msg_pptr,
+	uint16_t show_all));
 
 /*
  * slurm_free_node_info - free the node information response message
@@ -857,11 +864,13 @@ extern void slurm_init_part_desc_msg PARAMS((update_part_msg_t * update_part_msg
  * IN update_time - time of current configuration data
  * IN partition_info_msg_pptr - place to store a partition configuration 
  *	pointer
+ * IN show_all - if set then report even "hidden" partitions
  * RET 0 or a slurm error code
  * NOTE: free the response using slurm_free_partition_info_msg
  */
 extern int slurm_load_partitions PARAMS((
-	time_t update_time, partition_info_msg_t **part_buffer_ptr ));
+	time_t update_time, partition_info_msg_t **part_buffer_ptr,
+	uint16_t show_all));
 
 /*
  * slurm_free_partition_info_msg - free the partition information 
