Add ptrace kernel patch required for TotalView and update documentation to match.

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -8,6 +8,7 @@ EXTRA_DIST =			\
 	Make-rpm.mk		\
 	etc/slurm.conf.example	\
 	etc/init.d.slurm	\
+	etc/ptrace.patch	\
 	autogen.sh		\
 	slurm.spec		\
 	README			\
