o Add --core=type option to srun.  o Add support for generating lightweight corefiles from liblwcf    setting up LD_PRELOAD properly.

--- a/trunk/src/srun/Makefile.am
+++ b/trunk/src/srun/Makefile.am
@@ -33,7 +33,9 @@ srun_SOURCES = \
 	sigstr.c    \
 	sigstr.h    \
 	allocate.c  \
-	allocate.h
+	allocate.h  \
+	core-format.c \
+	core-format.h
 
 convenience_libs =  \
 	$(top_builddir)/src/common/libcommon.la   \
