o Remove --with-totalview test in srun. Unconditionally build in     "parallel debugger" support.  o Remove references to "totalview" in parallel debugger support code.  o Cleanup build system.  o Move autoconf test macros into auxdir directory into separate    .m4 files for ease of sharing.

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -1,8 +1,8 @@
 # $Id$
 
 AUTOMAKE_OPTIONS = foreign
-
-SUBDIRS    = src testsuite doc
+ACLOCAL_AMFLAGS = -I auxdir
+SUBDIRS    = auxdir src testsuite doc 
 
 EXTRA_DIST =			\
 	Make-rpm.mk		\
