--- a/trunk/testsuite/slurm_unit/common/Makefile.am
+++ b/trunk/testsuite/slurm_unit/common/Makefile.am
@@ -2,12 +2,15 @@ AUTOMAKE_OPTIONS = foreign
 
 if HAVE_ELAN
 elan_testprogs = runqsw
+elan_lib = $(top_builddir)/src/plugins/switch/elan/switch_elan.la
 else
 elan_testprogs =
+elan_lib =
 endif
 
 INCLUDES = 	-I$(top_srcdir)
-LDADD =		$(top_builddir)/src/common/libcommon.la
+LDADD =		$(top_builddir)/src/common/libcommon.la \
+		$(elan_lib)
 
 check_PROGRAMS = \
 	$(TESTS) \
