Rename man pages for hostlist_ functions to have "slurm_" prefix.

--- a/trunk/doc/man/Makefile.am
+++ b/trunk/doc/man/Makefile.am
@@ -9,9 +9,9 @@ man1_MANS =            \
 	man1/squeue.1  \
 	man1/srun.1 
 
-man3_MANS = man3/hostlist_create.3 \
-	man3/hostlist_destroy.3 \
-	man3/hostlist_shift.3 \
+man3_MANS = man3/slurm_hostlist_create.3 \
+	man3/slurm_hostlist_destroy.3 \
+	man3/slurm_hostlist_shift.3 \
 	man3/slurm_allocate_resources.3 \
 	man3/slurm_allocate_resources_and_run.3 \
 	man3/slurm_api_version.3 \
