--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -3,7 +3,7 @@
  *****************************************************************************
  *  Copyright (C) 2002 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
- *  Written by Moe Jette <jette1@llnl.gov>, 
+ *  Written by Morris Jette <jette1@llnl.gov>, 
  *	Joey Ekstrom <ekstrom1@llnl.gov> et. al.
  *  UCRL-CODE-2002-040.
  *  
@@ -157,6 +157,10 @@ enum node_states {
  * used to define the key size of the io_stream_header_t
  */
 #define SLURM_SSL_SIGNATURE_LENGTH 128
+
+/* Used as show_flags for slurm_get_ and slurm_load_ function calls.
+ * Values can be can be ORed */
+#define SHOW_ALL	1	/* Show info for "hidden" partitions */
 
 /*****************************************************************************\
  *	PROTOCOL DATA STRUCTURE DEFINITIONS
@@ -678,13 +682,13 @@ extern void slurm_print_ctl_conf PARAMS((
  *	information if changed since update_time 
  * IN update_time - time of current configuration data
  * IN job_info_msg_pptr - place to store a job configuration pointer
- * IN show_all - if set then report even "hidden" partitions
+ * IN show_flags - job filtering options
  * RET 0 or -1 on error
  * NOTE: free the response using slurm_free_job_info_msg
  */
 extern int slurm_load_jobs PARAMS((
 	time_t update_time, job_info_msg_t **job_info_msg_pptr,
-	uint16_t show_all));
+	uint16_t show_flags));
 
 /*
  * slurm_free_job_info - free the job information response message
@@ -753,14 +757,14 @@ extern int slurm_update_job PARAMS(( job_desc_msg_t * job_msg )) ;
  * IN step_id - get information for specific job step id, zero for all 
  *	job steps
  * IN job_info_msg_pptr - place to store a job configuration pointer
- * IN show_all - if set then report even "hidden" partitions
+ * IN show_flags - job step filtering options
  * RET 0 or a slurm error code
  * NOTE: free the response using slurm_free_job_step_info_response_msg
  */
 extern int slurm_get_job_steps PARAMS((
 	time_t update_time, uint32_t job_id, uint32_t step_id, 
 	job_step_info_response_msg_t **step_response_pptr,
-	uint16_t show_all));
+	uint16_t show_flags));
 
 /*
  * slurm_free_job_step_info_response_msg - free the job step 
@@ -802,13 +806,13 @@ extern void slurm_print_job_step_info PARAMS((
  *	if changed since update_time 
  * IN update_time - time of current configuration data
  * IN node_info_msg_pptr - place to store a node configuration pointer
- * IN show_all - if set then report even "hidden" partitions
+ * IN show_flags - node filtering options
  * RET 0 or a slurm error code
  * NOTE: free the response using slurm_free_node_info_msg
  */
 extern int slurm_load_node PARAMS((
 	time_t update_time, node_info_msg_t **node_info_msg_pptr,
-	uint16_t show_all));
+	uint16_t show_flags));
 
 /*
  * slurm_free_node_info - free the node information response message
@@ -864,13 +868,13 @@ extern void slurm_init_part_desc_msg PARAMS((update_part_msg_t * update_part_msg
  * IN update_time - time of current configuration data
  * IN partition_info_msg_pptr - place to store a partition configuration 
  *	pointer
- * IN show_all - if set then report even "hidden" partitions
+ * IN show_flags - partitions filtering options
  * RET 0 or a slurm error code
  * NOTE: free the response using slurm_free_partition_info_msg
  */
 extern int slurm_load_partitions PARAMS((
 	time_t update_time, partition_info_msg_t **part_buffer_ptr,
-	uint16_t show_all));
+	uint16_t show_flags));
 
 /*
  * slurm_free_partition_info_msg - free the partition information 
