Modify build for AIX. Plugins must link with libslurm for poe to work.

--- a/trunk/src/api/Makefile.am
+++ b/trunk/src/api/Makefile.am
@@ -57,6 +57,7 @@ common_dir = $(top_builddir)/src/common
 libslurm_la_LIBADD         = $(common_dir)/libcommon.la -lpthread
 
 libslurm_la_LDFLAGS        = \
+	$(LIB_LDFLAGS)       \
 	-version-info $(current):$(rev):$(age) \
 	$(OTHER_FLAGS)
 
