--- a/trunk/src/plugins/switch/none/Makefile.am
+++ b/trunk/src/plugins/switch/none/Makefile.am
@@ -11,4 +11,6 @@ pkglib_LTLIBRARIES = switch_none.la
 
 # Null switch plugin.
 switch_none_la_SOURCES = switch_none.c
-switch_none_la_LDFLAGS = $(PLUGIN_FLAGS)
+switch_none_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
+switch_none_la_LIBADD = $(top_builddir)/src/common/libcommon.la   \
+			$(top_builddir)/src/api/libslurm.la
