--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -101,12 +101,16 @@ CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
 LIBS="$PTHREAD_LIBS $LIBS"
 
 case "$host" in
-  *-*-aix*) LDFLAGS="$LDFLAGS -Wl,-brtl -Wl,-bexpall"
-            CMD_LDFLAGS="-Wl,-bgcbypass:1000" # keep all common functions 
+  *-*-aix*) LDFLAGS="$LDFLAGS -Wl,-brtl"      # permit run time linking
+            CMD_LDFLAGS="-Wl,-bgcbypass:1000" # keep all common functions
+            LIB_LDFLAGS="$LDFLAGS -Wl,-G -Wl,-bnoentry -Wl,-bexpfull" 
+            SO_LDFLAGS=" $LDFLAGS -Wl,-G -Wl,-bnoentry -Wl,-bexpfull"
             AC_DEFINE(USE_ALIAS, 0, [Define slurm_ prefix function aliases for plusins]) ;;
   *)        AC_DEFINE(USE_ALIAS, 1, [Define slurm_ prefix function aliases for plugins]) ;;
 esac
 AC_SUBST(CMD_LDFLAGS)
+AC_SUBST(LIB_LDFLAGS)
+AC_SUBST(SO_LDFLAGS)
 
 X_AC_SLURM_SEMAPHORE
 
