--- a/trunk/src/plugins/auth/munge/Makefile.am
+++ b/trunk/src/plugins/auth/munge/Makefile.am
@@ -16,7 +16,8 @@ pkglib_LTLIBRARIES = $(MUNGE)
 
 # Munge authentication plugin
 auth_munge_la_SOURCES = auth_munge.c
-auth_munge_la_LDFLAGS = $(PLUGIN_FLAGS) 
-auth_munge_la_LIBADD =   -lmunge 
-
+auth_munge_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS) 
+auth_munge_la_LIBADD =  -lmunge \
+			$(top_builddir)/src/common/libcommon.la   \
+			$(top_builddir)/src/api/libslurm.la 
 
