--- a/trunk/src/plugins/auth/none/Makefile.am
+++ b/trunk/src/plugins/auth/none/Makefile.am
@@ -11,5 +11,6 @@ pkglib_LTLIBRARIES = auth_none.la
 
 # Null authentication plugin.
 auth_none_la_SOURCES = auth_none.c
-auth_none_la_LDFLAGS = $(PLUGIN_FLAGS)
-auth_none_la_LIBADD = $(top_builddir)/src/api/libslurm.la
+auth_none_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
+auth_none_la_LIBADD  =	$(top_builddir)/src/common/libcommon.la   \
+			$(top_builddir)/src/api/libslurm.la
