--- a/trunk/src/plugins/jobcomp/filetxt/Makefile.am
+++ b/trunk/src/plugins/jobcomp/filetxt/Makefile.am
@@ -11,4 +11,6 @@ pkglib_LTLIBRARIES = jobcomp_filetxt.la
 
 # Text file job completion logging plugin.
 jobcomp_filetxt_la_SOURCES = jobcomp_filetxt.c
-jobcomp_filetxt_la_LDFLAGS = $(PLUGIN_FLAGS)
+jobcomp_filetxt_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
+jobcomp_filetxt_la_LIBADD  =	$(top_builddir)/src/common/libcommon.la   \
+				$(top_builddir)/src/api/libslurm.la
