--- a/trunk/src/plugins/sched/maui/wiki/Makefile.am
+++ b/trunk/src/plugins/sched/maui/wiki/Makefile.am
@@ -40,6 +40,12 @@ sched_wiki_la_SOURCES =	../agent.cpp		\
 			wiki_wrapper.cpp
 
 sched_wiki_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
+
+if HAVE_AIX
 sched_wiki_la_LIBADD = -lstdc++ \
 			$(top_builddir)/src/common/libcommon.la   \
 			$(top_builddir)/src/api/libslurm.la
+else
+sched_wiki_la_LIBADD = -lstdc++ \
+			$(top_builddir)/src/api/libslurm.la
+endif
