--- a/trunk/src/plugins/switch/elan/Makefile.am
+++ b/trunk/src/plugins/switch/elan/Makefile.am
@@ -24,9 +24,14 @@ switch_elan_la_SOURCES =        \
 # Add libslurm to switch_elan to provide some symbols that are not
 #  available in slurmctld (slurm_setenvpf)
 
+if HAVE_AIX
 switch_elan_la_LIBADD  = $(ELAN_LIBS)  \
 			$(top_builddir)/src/common/libcommon.la   \
 			$(top_builddir)/src/api/libslurm.la
+else
+switch_elan_la_LIBADD  = $(ELAN_LIBS)  $(top_builddir)/src/api/libslurm.la
+endif
+
 switch_elan_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
 
 else
