--- a/trunk/src/plugins/sched/backfill/Makefile.am
+++ b/trunk/src/plugins/sched/backfill/Makefile.am
@@ -14,7 +14,9 @@ pkglib_LTLIBRARIES = sched_backfill.la
 sched_backfill_la_SOURCES = backfill_wrapper.c	\
 			backfill.c	\
 			backfill.h
-
 sched_backfill_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
+
+if HAVE_AIX
 sched_backfill_la_LIBADD = $(top_builddir)/src/common/libcommon.la   \
 			$(top_builddir)/src/api/libslurm.la
+endif
