--- a/trunk/src/plugins/sched/builtin/Makefile.am
+++ b/trunk/src/plugins/sched/builtin/Makefile.am
@@ -12,7 +12,11 @@ INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common
 pkglib_LTLIBRARIES = sched_builtin.la
 
 sched_builtin_la_SOURCES = builtin_wrapper.c
-
 sched_builtin_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
+
+if HAVE_AIX
 sched_builtin_la_LIBADD = $(top_builddir)/src/common/libcommon.la   \
 			$(top_builddir)/src/api/libslurm.la
+else
+sched_builtin_la_LIBADD = $(top_builddir)/src/api/libslurm.la
+endif
