--- a/trunk/src/plugins/switch/none/Makefile.am
+++ b/trunk/src/plugins/switch/none/Makefile.am
@@ -12,5 +12,8 @@ pkglib_LTLIBRARIES = switch_none.la
 # Null switch plugin.
 switch_none_la_SOURCES = switch_none.c
 switch_none_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
+
+if HAVE_AIX
 switch_none_la_LIBADD = $(top_builddir)/src/common/libcommon.la   \
 			$(top_builddir)/src/api/libslurm.la
+endif
