--- a/trunk/src/api/Makefile.am
+++ b/trunk/src/api/Makefile.am
@@ -15,21 +15,31 @@ endif
 
 # libslurm version information : 
 #
-# Update this information before a public release only!
+# Update META file information before a public release only!
 # 
-# If library source code has changed at all increment rev
-# (current:rev:age) = (current:rev+1:age)
+# Note that libtool builds libslurm.so.<major>.<age>.<rev>
+# where major = API_MAJOR = (API_CURRENT - API_AGE)
+# and   age   = API_AGE
+# and   rev   = API_REVISION
 #
-# If any interfaces have been added,removed, or changed increment current
-#  and set rev = 0;
+# The following examples are based upon initial values of API_MAJOR = 6,
+# API_AGE = 4, API_REVISION = 6.
 #
-# If any interfaces have been added increment age
+# If any interfaces have been added: increment API_MAJOR, increment API_AGE,
+# and set API_REVISION = 0 (e.g. libslurm.so.2.4.6 -> libslurm.so.2.5.0)
 #
-# If any interfaces have been removed, set age = 0
+# If any interfaces have been removed: increment API_CURRENT, set API_AGE = 0, 
+# and set API_REVISION = 0 (e.g. libslurm.so.2.4.6 -> libslurm.so.7.0.0)
+#
+# If any interfaces have changed: increment API_CURRENT only
+# (e.g. libslurm.so.2.4.6 -> libslurm.so.3.4.6)
+#
+# If the interfaces have not changed, but underlying code has changed at all: 
+# increment API_REVISION only (e.g. libslurm.so.2.4.6 -> libslurm.so.2.4.7)
 #
 current = $(SLURM_API_CURRENT)
-rev     = $(SLURM_API_REVISION)
 age     = $(SLURM_API_AGE)
+rev     = $(SLURM_API_REVISION)
 
 lib_LTLIBRARIES = libslurm.la
 
