Added job completion script plugin with appropriate documentation updates.

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -195,6 +195,7 @@ AC_CONFIG_FILES([Makefile
 		 src/plugins/jobcomp/Makefile
 		 src/plugins/jobcomp/filetxt/Makefile
 		 src/plugins/jobcomp/none/Makefile
+		 src/plugins/jobcomp/script/Makefile
 		 src/plugins/sched/Makefile
 		 src/plugins/sched/backfill/Makefile
 		 src/plugins/sched/builtin/Makefile
