--- a/trunk/src/plugins/jobcomp/script/Makefile.am
+++ b/trunk/src/plugins/jobcomp/script/Makefile.am
@@ -1,5 +1,5 @@
 # $Id$
-# Makefile for jobcomp/script plugin
+# Makefile for jobcomp/filetxt plugin
 
 AUTOMAKE_OPTIONS = foreign
 
@@ -9,11 +9,11 @@ INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/common
 
 pkglib_LTLIBRARIES = jobcomp_script.la
 
-# Script job completion logging plugin.
-jobcomp_script_la_SOURCES = jobcomp_script.c
+# Text file job completion logging plugin.
+jobcomp_script_la_SOURCES = job_record.c job_record.h jobcomp_script.c
 jobcomp_script_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
 
 if HAVE_AIX
-jobcomp_script_la_LIBADD  = $(top_builddir)/src/common/libcommon.la   \
-			$(top_builddir)/src/api/libslurm.la
+jobcomp_script_la_LIBADD  =	$(top_builddir)/src/common/libcommon.la   \
+				$(top_builddir)/src/api/libslurm.la
 endif
