Added infrastructure for system checkpoint: plugin, RPCs, APIs, and scontrol options. For now only the NULL plugin is available, but this is required for ASC Purple.

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -192,6 +192,8 @@ AC_CONFIG_FILES([Makefile
 		 src/plugins/auth/authd/Makefile
 		 src/plugins/auth/munge/Makefile
 		 src/plugins/auth/none/Makefile
+		 src/plugins/checkpoint/Makefile
+		 src/plugins/checkpoint/none/Makefile
 		 src/plugins/jobcomp/Makefile
 		 src/plugins/jobcomp/filetxt/Makefile
 		 src/plugins/jobcomp/none/Makefile
