--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -173,19 +173,6 @@ enum ctx_keys {
 	SLURM_STEP_CTX_TID	/* get array of task IDs for specified node */
 };
 
-/* Define checkpoint options */
-enum check_opts {
-	CHECK_DISABLE,		/* disable checkpointing */
-	CHECK_ENABLE,		/* enable checkpointing */
-	CHECK_CREATE,		/* create a checkpoint for this job, 
-				 * job continues execution afterwards */
-	CHECK_VACATE,		/* create a checkpoint for this job,
-				 * job terminates afterwards */
-	CHECK_RESUME,		/* resume a previously checkpointed job */
-	CHECK_COMPLETE,		/* a checkpoint of this job has completed */
-	CHECK_FAILED		/* a checkpoint of this job has failed */
-};
-
 /*****************************************************************************\
  *	PROTOCOL DATA STRUCTURE DEFINITIONS
 \*****************************************************************************/
@@ -1036,15 +1023,71 @@ extern int slurm_shutdown PARAMS(( uint16_t core ));
 \*****************************************************************************/
 
 /*
- * slurm_checkpoint - perform some checkpoint operation for some job step
- * IN op      - operation to perform
+ * slurm_checkpoint_disable - disable checkpoint requests for some job step
  * IN job_id  - job on which to perform operation
  * IN step_id - job step on which to perform operation
  * RET 0 or a slurm error code
  */
-extern int slurm_checkpoint PARAMS(( enum check_opts op, uint32_t job_id,
-		uint32_t step_id ));
+extern int slurm_checkpoint_disable (uint32_t job_id, uint32_t step_id);
 
+
+/*
+ * slurm_checkpoint_enable - enable checkpoint requests for some job step
+ * IN job_id  - job on which to perform operation
+ * IN step_id - job step on which to perform operation
+ * RET 0 or a slurm error code
+ */
+extern int slurm_checkpoint_enable (uint32_t job_id, uint32_t step_id);
+
+/*
+ * slurm_checkpoint_create - initiate a checkpoint requests for some job step.
+ *	the job will continue execution after the checkpoint operation completes
+ * IN job_id  - job on which to perform operation
+ * IN step_id - job step on which to perform operation
+ * IN max_wait - maximum wait for operation to complete, in seconds
+ * RET 0 or a slurm error code
+ */
+extern int slurm_checkpoint_create (uint32_t job_id, uint32_t step_id, 
+		uint16_t max_wait);
+
+/*
+ * slurm_checkpoint_vacate - initiate a checkpoint requests for some job step.
+ *	the job will terminate after the checkpoint operation completes
+ * IN job_id  - job on which to perform operation
+ * IN step_id - job step on which to perform operation
+ * IN max_wait - maximum wait for operation to complete, in seconds
+ * RET 0 or a slurm error code
+ */
+extern int slurm_checkpoint_vacate (uint32_t job_id, uint32_t step_id, 
+		uint16_t max_wait);
+
+/*
+ * slurm_checkpoint_resume - resume execution of a checkpointed job step.
+ * IN job_id  - job on which to perform operation
+ * IN step_id - job step on which to perform operation
+ * RET 0 or a slurm error code
+ */
+extern int slurm_checkpoint_resume (uint32_t job_id, uint32_t step_id);
+
+/*
+ * slurm_checkpoint_complete - note the successful completion of a job step's 
+ *	checkpoint operation.
+ * IN job_id  - job on which to perform operation
+ * IN step_id - job step on which to perform operation
+ * RET 0 or a slurm error code
+ */
+extern int slurm_checkpoint_complete (uint32_t job_id, uint32_t step_id);
+
+/*
+ * slurm_checkpoint_failed - note the unsuccessful completion of a job step's 
+ *	checkpoint operation.
+ * IN job_id  - job on which to perform operation
+ * IN step_id - job step on which to perform operation
+ * IN ckpt_errno - plugin-specific error code indicative of the failure type
+ * RET 0 or a slurm error code
+ */
+extern int slurm_checkpoint_failed (uint32_t job_id, uint32_t step_id, 
+		uint16_t ckpt_errno);
 
 /*
  * slurm_checkpoint_error - gather error information for the last checkpoint operation 
@@ -1058,8 +1101,8 @@ extern int slurm_checkpoint PARAMS(( enum check_opts op, uint32_t job_id,
  *	checkpoint operation
  * RET 0 or a slurm error code
  */
-extern int slurm_checkpoint_error PARAMS(( uint32_t job_id, uint32_t step_id, 
-		uint32_t *ckpt_errno, char **ckpt_strerror ));
+extern int slurm_checkpoint_error ( uint32_t job_id, uint32_t step_id, 
+		uint16_t *ckpt_errno, char **ckpt_strerror);
 
 END_C_DECLS
 
