--- a/trunk/src/plugins/auth/none/Makefile.am
+++ b/trunk/src/plugins/auth/none/Makefile.am
@@ -14,8 +14,5 @@ auth_none_la_SOURCES = auth_none.c
 auth_none_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
 
 if HAVE_AIX
-auth_none_la_LIBADD  =	$(top_builddir)/src/common/libcommon.la   \
-			$(top_builddir)/src/api/libslurm.la
-else
-auth_none_la_LIBADD = $(top_builddir)/src/api/libslurm.la
+auth_none_la_LIBADD  =	$(top_builddir)/src/common/libcommon.la
 endif
