Avoid explicitly loading some libraries for AIX that are not required. No change for non-AIX systems.

--- a/trunk/src/plugins/checkpoint/aix/Makefile.am
+++ b/trunk/src/plugins/checkpoint/aix/Makefile.am
@@ -12,8 +12,7 @@ if HAVE_AIX
 pkglib_LTLIBRARIES = checkpoint_aix.la
 checkpoint_aix_la_SOURCES = checkpoint_aix.c
 checkpoint_aix_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
-checkpoint_aix_la_LIBADD  = $(top_builddir)/src/common/libcommon.la   \
-			$(top_builddir)/src/api/libslurm.la
+checkpoint_aix_la_LIBADD  = $(top_builddir)/src/common/libcommon.la
 else
 EXTRA_checkpoint_aix_la_SOURCES =  checkpoint_aix.c
 endif
