--- a/trunk/src/plugins/jobcomp/script/Makefile.am
+++ b/trunk/src/plugins/jobcomp/script/Makefile.am
@@ -14,6 +14,5 @@ jobcomp_script_la_SOURCES = job_record.c job_record.h jobcomp_script.c
 jobcomp_script_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
 
 if HAVE_AIX
-jobcomp_script_la_LIBADD  =	$(top_builddir)/src/common/libcommon.la   \
-				$(top_builddir)/src/api/libslurm.la
+jobcomp_script_la_LIBADD  = $(top_builddir)/src/common/libcommon.la
 endif
