--- a/trunk/src/plugins/sched/builtin/Makefile.am
+++ b/trunk/src/plugins/sched/builtin/Makefile.am
@@ -15,8 +15,5 @@ sched_builtin_la_SOURCES = builtin_wrapper.c
 sched_builtin_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
 
 if HAVE_AIX
-sched_builtin_la_LIBADD = $(top_builddir)/src/common/libcommon.la   \
-			$(top_builddir)/src/api/libslurm.la
-else
-sched_builtin_la_LIBADD = $(top_builddir)/src/api/libslurm.la
+sched_builtin_la_LIBADD = $(top_builddir)/src/common/libcommon.la
 endif
