--- a/trunk/src/plugins/switch/none/Makefile.am
+++ b/trunk/src/plugins/switch/none/Makefile.am
@@ -14,6 +14,5 @@ switch_none_la_SOURCES = switch_none.c
 switch_none_la_LDFLAGS = $(SO_LDFLAGS) $(PLUGIN_FLAGS)
 
 if HAVE_AIX
-switch_none_la_LIBADD = $(top_builddir)/src/common/libcommon.la   \
-			$(top_builddir)/src/api/libslurm.la
+switch_none_la_LIBADD = $(top_builddir)/src/common/libcommon.la
 endif
