--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -146,8 +146,10 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man8/*
 %dir /etc/slurm
 %dir %{_libdir}/slurm
+%{_libdir}/slurm/checkpoint_none.so
 %{_libdir}/slurm/jobcomp_none.so
 %{_libdir}/slurm/jobcomp_filetxt.so
+%{_libdir}/slurm/jobcomp_script.so
 %{_libdir}/slurm/sched_backfill.so
 %{_libdir}/slurm/sched_builtin.so
 %{_libdir}/slurm/switch_none.so
@@ -222,6 +224,8 @@ fi
 
 
 %changelog
+* Thu Jul 29 2004 Morris Jette <jette1@llnl.gov>
+- added checkpoint_none.so and jobcomp_script.so plugins
 * Fri Mar 07 2004 Mark Grondona <mgrondona@llnl.gov>
 - package optional plugins based on file lists instead of tests
 * Tue Jan 27 2004 Moe Jette <jette@llnl.gov>
