--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -237,6 +237,8 @@ typedef struct job_descriptor {	/* For submit, allocate, and update requests */
 				 * slurm_allocate* function */
 	uint16_t port;		/* port to contact initiating srun */
 	char *host;		/* host to contact initiating srun */
+	uint32_t dependency;	/* defer until specified job completes */
+	char *account;		/* charge to specified account */
 } job_desc_msg_t;
 
 typedef struct job_info {
@@ -274,6 +276,8 @@ typedef struct job_info {
 				 * start_range_1, end_range_1, 
 				 * start_range_2, .., -1  */
 	char *features;		/* comma separated list of required features */
+	uint32_t dependency;	/* defer until specified job completes */
+	char *account;		/* charge to specified account */
 } job_info_t;
 
 typedef struct job_info_msg {
