--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -133,6 +133,18 @@ enum job_states {
 };
 #define JOB_COMPLETING (0x8000)
 
+/* Reason for job to be pending rather than executing. If multiple reasons 
+ * exists, only one is given for the sake of system efficiency */
+enum job_wait_reason {
+	WAIT_NO_REASON = 0,	/* not set or job not pending */
+	WAIT_PRIORITY,		/* higher priority jobs exist */
+	WAIT_DEPENDENCY,	/* depedent job has not completed */
+	WAIT_RESOUCES,		/* required resources not available */
+	WAIT_PART_NODE_LIMIT,	/* request exceeds partition node limit */
+	WAIT_PART_TIME_LIMIT,	/* request exceeds partition time limit */
+	WAIT_PART_STATE		/* requested partition is down */
+};
+
 /* Possible task distributions across the nodes */
 enum task_dist_states {
 	SLURM_DIST_CYCLIC,	/* distribute tasks 1 per node, round robin */
@@ -279,6 +291,8 @@ typedef struct job_info {
 	char *features;		/* comma separated list of required features */
 	uint32_t dependency;	/* defer until specified job completes */
 	char *account;		/* charge to specified account */
+	uint16_t wait_reason;	/* reason job still pending, see
+				 * slurm.h:enum job_wait_reason */
 } job_info_t;
 
 typedef struct job_info_msg {
