Add node selection plugin infrastructure (still need to move some code for current Linux clusters and develop all new logic for Blue Gene).

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -206,6 +206,9 @@ AC_CONFIG_FILES([Makefile
 		 src/plugins/sched/builtin/Makefile
 		 src/plugins/sched/maui/Makefile
 		 src/plugins/sched/maui/wiki/Makefile
+		 src/plugins/select/Makefile
+		 src/plugins/select/bluegene/Makefile
+		 src/plugins/select/linear/Makefile
 		 src/plugins/switch/Makefile
 		 src/plugins/switch/elan/Makefile
 		 src/plugins/switch/none/Makefile
