--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -103,6 +103,7 @@ CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
 LIBS="$PTHREAD_LIBS $LIBS"
 
 X_AC_AIX
+X_AC_BGL
 X_AC_SLURM_SEMAPHORE
 
 dnl checks for system services.
