Made it so q or return would kick you out of the program and not -i would work

--- a/trunk/src/smap/Makefile.am
+++ b/trunk/src/smap/Makefile.am
@@ -12,7 +12,7 @@ smap_LDADD =					  \
 	$(top_builddir)/src/common/libcommon.la   \
 	$(top_builddir)/src/api/libslurm.la
 
-noinst_HEADERS = smap.h print.h
+noinst_HEADERS = smap.h print.h printjob.h
 smap_SOURCES = smap.c opts.c print.c printjob.c sort.c sortjob.c
 
 force:
